--- a/index.html
+++ b/index.html
@@ -126,7 +126,9 @@
 </head>
 <body>
   <header>
-    <div class="logo" id="logo">Seika Education Consultancy</div>
+   <div class="logo" id="logo">
+      <img src="Seika-Final-Logo.jpeg" alt="Seika Education Consultancy" />
+    </div>
     <nav>
       <ul id="navMenu">
         <li><a href="#" data-en="Home" data-jp="ホーム">Home</a></li>
