--- a/index.html
+++ b/index.html
@@ -8,20 +8,19 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #f9f9f9;
-      color: #333;
+      background: #0a1f4a; /* match logo dark blue */
+      color: white;
     }
     header {
-      background: linear-gradient(90deg, #6a11cb, #2575fc);
+      background: #0a1f4a; /* match logo color */
       color: white;
-      padding: 15px 30px;
+      padding: 10px 30px;
       display: flex;
       justify-content: space-between;
       align-items: center;
     }
-    header .logo {
-      font-size: 24px;
-      font-weight: bold;
+    header .logo img {
+      height: 48px;
     }
     nav ul {
       list-style: none;
@@ -51,19 +50,18 @@
       margin-left: 10px;
     }
     .hero {
-      background: url('https://via.placeholder.com/1200x400?text=Study+in+Japan') center/cover no-repeat,
-                  linear-gradient(90deg, #6a11cb, #2575fc);
-      background-blend-mode: multiply;
-      color: white;
+      background: url('https://via.placeholder.com/1200x400/0a1f4a/ffffff?text=Study+in+Japan') center/cover no-repeat;
       text-align: center;
-      padding: 120px 20px 80px;
-      font-size: 1.5rem;
-      font-weight: 600;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.7);
+      padding: 80px 20px 60px;
     }
     .hero h1 {
-      font-size: 3rem;
-      margin-bottom: 0.2em;
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+    }
+    .hero p {
+      font-size: 1.3rem;
+      max-width: 700px;
+      margin: 0 auto;
     }
     .container {
       max-width: 960px;
@@ -78,6 +76,7 @@
     }
     .service {
       background: white;
+      color: #333;
       flex: 1 1 280px;
       border-radius: 8px;
       padding: 20px;
@@ -92,10 +91,10 @@
     }
     .service h3 {
       margin-bottom: 15px;
-      color: #6a11cb;
+      color: #0a1f4a;
     }
     .contact-cta {
-      background: linear-gradient(90deg, #6a11cb, #2575fc);
+      background: #0a1f4a;
       color: white;
       padding: 30px 20px;
       text-align: center;
@@ -103,17 +102,14 @@
       margin: 50px 0;
     }
     .contact-cta button {
-      background: #fff;
+      background: #0066cc;
       border: none;
       padding: 14px 32px;
       font-size: 1.1rem;
-      color: #6a11cb;
+      color: white;
       border-radius: 6px;
       cursor: pointer;
       font-weight: 600;
-    }
-    .contact-cta button:hover {
-      background: #f0f0f0;
     }
     footer {
       background: #222;
@@ -126,15 +122,15 @@
 </head>
 <body>
   <header>
-   <div class="logo" id="logo">
-      <img src="Seika-Final-Logo.jpeg" alt="Seika Education Consultancy" />
+    <div class="logo">
+      <img src="images/logo.png" alt="Seika Education Consultancy" />
     </div>
     <nav>
-      <ul id="navMenu">
-        <li><a href="#" data-en="Home" data-jp="ホーム">Home</a></li>
-        <li><a href="#" data-en="About" data-jp="会社概要">About</a></li>
-        <li><a href="#" data-en="Services" data-jp="サービス">Services</a></li>
-        <li><a href="#" data-en="Contact" data-jp="お問い合わせ">Contact</a></li>
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Contact</a></li>
       </ul>
     </nav>
     <div class="language-switch">
@@ -143,129 +139,25 @@
   </header>
 
   <section class="hero">
-    <h1 id="heroTitle">Where Dreams Meet Opportunity</h1>
-    <p id="heroDesc">Your trusted partner for studying in Japan</p>
+    <h1>Where Dreams Meet Opportunity</h1>
+    <p>Your trusted partner for studying in Japan</p>
   </section>
 
   <main class="container">
     <section class="services">
       <div class="service">
         <img src="https://via.placeholder.com/300x180?text=Consultation" alt="Consultation" />
-        <h3 data-en="Study Consultation" data-jp="留学相談">Study Consultation</h3>
-        <p data-en="Personalized guidance for your study plans in Japan." 
-           data-jp="あなたの留学計画に合わせた個別相談を提供します。">
-          Personalized guidance for your study plans in Japan.
-        </p>
+        <h3>Study Consultation</h3>
+        <p>Personalized guidance for your study plans in Japan.</p>
       </div>
       <div class="service">
         <img src="https://via.placeholder.com/300x180?text=Visa+Support" alt="Visa Support" />
-        <h3 data-en="Visa Support" data-jp="ビザサポート">Visa Support</h3>
-        <p data-en="Assistance with visa application and documentation." 
-           data-jp="ビザ申請や書類準備のサポートを行います。">
-          Assistance with visa application and documentation.
-        </p>
+        <h3>Visa Support</h3>
+        <p>Assistance with visa application and documentation.</p>
       </div>
       <div class="service">
         <img src="https://via.placeholder.com/300x180?text=Language+Training" alt="Language Training" />
-        <h3 data-en="Language Training" data-jp="語学研修">Language Training</h3>
-        <p data-en="Japanese language courses to prepare you for your studies." 
-           data-jp="留学前の日本語研修コースをご用意しています。">
-          Japanese language courses to prepare you for your studies.
-        </p>
+        <h3>Language Training</h3>
+        <p>Japanese language courses to prepare you for your studies.</p>
       </div>
-    </section>
-
-    <section class="contact-cta">
-      <h2 id="contactTitle">Contact Us for More Info</h2>
-      <button onclick="alert(currentLang==='en' ? 'Contact form coming soon!' : 'お問い合わせフォームは準備中です！')">Contact Us</button>
-    </section>
-  </main>
-
-  <footer>
-    <p id="footerText">© 2025 Seika Education Consultancy. All rights reserved.</p>
-  </footer>
-
-  <script>
-    const langElements = {
-      navLinks: document.querySelectorAll('#navMenu a'),
-      heroTitle: document.getElementById('heroTitle'),
-      heroDesc: document.getElementById('heroDesc'),
-      services: document.querySelectorAll('.service h3, .service p'),
-      contactTitle: document.getElementById('contactTitle'),
-      footerText: document.getElementById('footerText'),
-      logo: document.getElementById('logo'),
-      contactButton: document.querySelector('.contact-cta button')
-    };
-
-    const langData = {
-      en: {
-        logo: "Seika Education Consultancy",
-        nav: ["Home", "About", "Services", "Contact"],
-        heroTitle: "Where Dreams Meet Opportunity",
-        heroDesc: "Your trusted partner for studying in Japan",
-        servicesTitles: [
-          "Study Consultation",
-          "Visa Support",
-          "Language Training"
-        ],
-        servicesDesc: [
-          "Personalized guidance for your study plans in Japan.",
-          "Assistance with visa application and documentation.",
-          "Japanese language courses to prepare you for your studies."
-        ],
-        contactTitle: "Contact Us for More Info",
-        footerText: "© 2025 Seika Education Consultancy. All rights reserved.",
-        contactAlert: "Contact form coming soon!"
-      },
-      jp: {
-        logo: "聖華教育コンサルタンシー",
-        nav: ["ホーム", "私たちについて", "サービス", "お問い合わせ"],
-        heroTitle: "夢とチャンスが出会う場所",
-        heroDesc: "日本留学の信頼できるパートナー",
-        servicesTitles: [
-          "留学相談",
-          "ビザサポート",
-          "語学研修"
-        ],
-        servicesDesc: [
-          "あなたの留学計画に合わせた個別相談を提供します。",
-          "ビザ申請や書類準備のサポートを行います。",
-          "留学前の日本語研修コースをご用意しています。"
-        ],
-        contactTitle: "詳しくはお問い合わせください",
-        footerText: "© 2025 聖華教育コンサルタンシー。全著作権所有。",
-        contactAlert: "お問い合わせフォームは準備中です！"
-      }
-    };
-
-    let currentLang = 'en';
-
-    function updateLanguage(lang) {
-      currentLang = lang;
-      const data = langData[lang];
-      langElements.logo.textContent = data.logo;
-
-      langElements.navLinks.forEach((link, i) => {
-        link.textContent = data.nav[i];
-      });
-
-      langElements.heroTitle.textContent = data.heroTitle;
-      langElements.heroDesc.textContent = data.heroDesc;
-
-      langElements.services.forEach((el, i) => {
-        if (i % 2 === 0) {
-          el.textContent = data.servicesTitles[Math.floor(i / 2)];
-        } else {
-          el.textContent = data.servicesDesc[Math.floor(i / 2)];
-        }
-      });
-
-      langElements.contactTitle.textContent = data.contactTitle;
-      langElements.footerText.textContent = data.footerText;
-    }
-
-    document.getElementById('enBtn').addEventListener('click', () => updateLanguage('en'));
-    document.getElementById('jpBtn').addEventListener('click', () => updateLanguage('jp'));
-  </script>
-</body>
-</html>
+    </sect
