--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images/logo.png" alt="Seika Education Consultancy" />
+      <img src="Seika-Final-Logo.jpeg" alt="Seika Education Consultancy" />
     </div>
     <nav>
       <ul>
