--- a/index.html
+++ b/index.html
@@ -8,40 +8,58 @@
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #0a1f4a; /* match logo dark blue */
+      background: #0a1f4a;
       color: white;
     }
+
+    html {
+      scroll-behavior: smooth;
+    }
+
     header {
       background: #0a1f4a;
       color: white;
-      padding: 10px 20px;
+      padding: 12px 30px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
+
     header .logo img {
-      height: 48px;
+      height: 100px;
+      max-width: 100%;
     }
+
     nav ul {
       list-style: none;
       display: flex;
       margin: 0; padding: 0;
     }
+
     nav ul li {
-      margin-left: 20px;
+      margin-left: 25px;
     }
+
     nav ul li a {
       color: white;
       text-decoration: none;
       font-weight: 600;
+      transition: color 0.3s;
     }
+
     nav ul li a:hover {
-      text-decoration: underline;
+      color: #ffd700;
     }
+
     .language-switch {
-      margin-left: 10px;
+      margin-left: 15px;
     }
+
     .language-switch button {
       background: none;
       border: none;
@@ -50,31 +68,41 @@
       font-weight: 600;
       margin-left: 5px;
     }
+
+    /* Hero Banner */
     .hero {
-      background: url('https://via.placeholder.com/1200x400/0a1f4a/ffffff?text=Study+in+Japan') center/cover no-repeat;
+      background: url('https://via.placeholder.com/1400x600/0a1f4a/ffffff?text=Welcome+to+Seika+Education+Consultancy') center/cover no-repeat;
       text-align: center;
-      padding: 80px 20px 60px;
+      padding: 120px 20px 100px;
+      position: relative;
     }
+
     .hero h1 {
-      font-size: 2.5rem;
+      font-size: 3.2rem;
       margin-bottom: 10px;
+      text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
     }
+
     .hero p {
-      font-size: 1.3rem;
-      max-width: 700px;
+      font-size: 1.6rem;
+      max-width: 850px;
       margin: 0 auto;
+      text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
     }
+
     .container {
-      max-width: 1000px;
+      max-width: 1100px;
       margin: 40px auto;
       padding: 0 20px;
     }
+
     .services {
       display: flex;
       flex-wrap: wrap;
       gap: 20px;
       justify-content: center;
     }
+
     .service {
       background: white;
       color: #333;
@@ -83,25 +111,35 @@
       padding: 20px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       text-align: center;
+      transition: transform 0.3s;
     }
+
+    .service:hover {
+      transform: translateY(-5px);
+    }
+
     .service img {
       max-width: 100%;
       height: auto;
       border-radius: 6px;
       margin-bottom: 15px;
     }
+
     .service h3 {
       margin-bottom: 15px;
       color: #0a1f4a;
     }
+
     .contact-cta {
       background: #0a1f4a;
       color: white;
-      padding: 30px 20px;
+      padding: 40px 20px;
       text-align: center;
       border-radius: 8px;
-      margin: 50px 0;
+      margin: 60px 0;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.2);
     }
+
     .contact-cta button {
       background: #0066cc;
       border: none;
@@ -111,11 +149,17 @@
       border-radius: 6px;
       cursor: pointer;
       font-weight: 600;
+      transition: background 0.3s;
     }
+
+    .contact-cta button:hover {
+      background: #004c99;
+    }
+
     footer {
       background: #222;
       color: #ccc;
-      padding: 15px 30px;
+      padding: 20px 30px;
       text-align: center;
       font-size: 0.9rem;
     }
@@ -126,18 +170,27 @@
         flex-direction: column;
         align-items: flex-start;
       }
+
+      header .logo img {
+        height: 80px;
+      }
+
       nav ul {
         flex-direction: column;
         width: 100%;
+        margin-top: 10px;
       }
+
       nav ul li {
         margin: 10px 0;
       }
+
       .hero h1 {
-        font-size: 2rem;
+        font-size: 2.4rem;
       }
+
       .hero p {
-        font-size: 1rem;
+        font-size: 1.3rem;
       }
     }
   </style>
@@ -161,31 +214,31 @@
   </header>
 
   <section class="hero">
-    <h1>Where Dreams Meet Opportunity</h1>
-    <p>Your trusted partner for studying in Japan</p>
+    <h1>Welcome to Seika Education Consultancy</h1>
+    <p>Your trusted partner for studying in Japan — Where Dreams Meet Opportunity and Success</p>
   </section>
 
   <main class="container">
     <section class="services">
       <div class="service">
-        <img src="https://via.placeholder.com/300x180?text=Consultation" alt="Consultation" />
+        <img src="https://via.placeholder.com/300x200?text=Study+Consultation" alt="Consultation" />
         <h3>Study Consultation</h3>
         <p>Personalized guidance for your study plans in Japan.</p>
       </div>
       <div class="service">
-        <img src="https://via.placeholder.com/300x180?text=Visa+Support" alt="Visa Support" />
+        <img src="https://via.placeholder.com/300x200?text=Visa+Support" alt="Visa Support" />
         <h3>Visa Support</h3>
         <p>Assistance with visa application and documentation.</p>
       </div>
       <div class="service">
-        <img src="https://via.placeholder.com/300x180?text=Language+Training" alt="Language Training" />
+        <img src="https://via.placeholder.com/300x200?text=Language+Training" alt="Language Training" />
         <h3>Language Training</h3>
         <p>Japanese language courses to prepare you for your studies.</p>
       </div>
     </section>
 
     <section class="contact-cta">
-      <h2>Contact Us for More Info</h2>
+      <h2>Contact Us for More Information</h2>
       <button onclick="alert('Contact form coming soon!')">Contact Us</button>
     </section>
   </main>
