--- a/index.html
+++ b/index.html
@@ -4,35 +4,30 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Seika Education Consultancy</title>
+
+  <!-- Swiper CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+
   <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0; padding: 0;
-      background: #0a1f4a;
+      background: #2A6BBF;
       color: white;
     }
 
-    html {
-      scroll-behavior: smooth;
-    }
-
     header {
-      background: #0a1f4a;
+      background: #2A6BBF;
       color: white;
       padding: 12px 30px;
       display: flex;
       flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
-      position: sticky;
-      top: 0;
-      z-index: 1000;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
     }
 
     header .logo img {
-      height: 100px;
-      max-width: 100%;
+      height: 80px;
     }
 
     nav ul {
@@ -49,11 +44,10 @@
       color: white;
       text-decoration: none;
       font-weight: 600;
-      transition: color 0.3s;
     }
 
     nav ul li a:hover {
-      color: #ffd700;
+      text-decoration: underline;
     }
 
     .language-switch {
@@ -69,25 +63,39 @@
       margin-left: 5px;
     }
 
-    /* Hero Banner */
+    /* Hero with Swiper */
     .hero {
-      background: url('https://via.placeholder.com/1400x600/0a1f4a/ffffff?text=Welcome+to+Seika+Education+Consultancy') center/cover no-repeat;
-      text-align: center;
-      padding: 120px 20px 100px;
       position: relative;
     }
 
-    .hero h1 {
-      font-size: 3.2rem;
-      margin-bottom: 10px;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
+    .swiper {
+      width: 100%;
+      height: 600px;
     }
 
-    .hero p {
-      font-size: 1.6rem;
-      max-width: 850px;
-      margin: 0 auto;
-      text-shadow: 1px 1px 6px rgba(0,0,0,0.6);
+    .swiper-slide img {
+      object-fit: cover;
+      width: 100%;
+      height: 100%;
+    }
+
+    .hero-text {
+      position: absolute;
+      top: 40%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      color: white;
+      text-align: center;
+      text-shadow: 2px 2px 6px rgba(0,0,0,0.7);
+    }
+
+    .hero-text h1 {
+      font-size: 3rem;
+      margin-bottom: 10px;
+    }
+
+    .hero-text p {
+      font-size: 1.5rem;
     }
 
     .container {
@@ -111,11 +119,6 @@
       padding: 20px;
       box-shadow: 0 2px 10px rgba(0,0,0,0.1);
       text-align: center;
-      transition: transform 0.3s;
-    }
-
-    .service:hover {
-      transform: translateY(-5px);
     }
 
     .service img {
@@ -127,17 +130,16 @@
 
     .service h3 {
       margin-bottom: 15px;
-      color: #0a1f4a;
+      color: #2A6BBF;
     }
 
     .contact-cta {
-      background: #0a1f4a;
+      background: #2A6BBF;
       color: white;
-      padding: 40px 20px;
+      padding: 30px 20px;
       text-align: center;
       border-radius: 8px;
-      margin: 60px 0;
-      box-shadow: 0 2px 12px rgba(0,0,0,0.2);
+      margin: 50px 0;
     }
 
     .contact-cta button {
@@ -149,17 +151,12 @@
       border-radius: 6px;
       cursor: pointer;
       font-weight: 600;
-      transition: background 0.3s;
-    }
-
-    .contact-cta button:hover {
-      background: #004c99;
     }
 
     footer {
       background: #222;
       color: #ccc;
-      padding: 20px 30px;
+      padding: 15px 30px;
       text-align: center;
       font-size: 0.9rem;
     }
@@ -172,30 +169,36 @@
       }
 
       header .logo img {
-        height: 80px;
+        height: 64px;
       }
 
       nav ul {
         flex-direction: column;
         width: 100%;
-        margin-top: 10px;
       }
 
       nav ul li {
         margin: 10px 0;
       }
 
-      .hero h1 {
-        font-size: 2.4rem;
+      .swiper {
+        height: 300px;
       }
 
-      .hero p {
-        font-size: 1.3rem;
+      .hero-text h1 {
+        font-size: 2.2rem;
+      }
+
+      .hero-text p {
+        font-size: 1.2rem;
       }
     }
   </style>
 </head>
+
 <body>
+
+  <!-- Header -->
   <header>
     <div class="logo">
       <img src="Seika-Final-Logo.jpeg" alt="Seika Education Consultancy" />
@@ -213,11 +216,36 @@
     </div>
   </header>
 
+  <!-- Hero Slider Section -->
   <section class="hero">
-    <h1>Welcome to Seika Education Consultancy</h1>
-    <p>Your trusted partner for studying in Japan — Where Dreams Meet Opportunity and Success</p>
+    <div class="swiper mySwiper">
+      <div class="swiper-wrapper">
+        <!-- Slide 1 -->
+        <div class="swiper-slide">
+          <img src="your-image1.jpg" alt="Welcome Image 1" />
+        </div>
+        <!-- Slide 2 -->
+        <div class="swiper-slide">
+          <img src="your-image2.jpg" alt="Welcome Image 2" />
+        </div>
+        <!-- Slide 3 -->
+        <div class="swiper-slide">
+          <img src="your-image3.jpg" alt="Welcome Image 3" />
+        </div>
+      </div>
+
+      <!-- Pagination -->
+      <div class="swiper-pagination"></div>
+    </div>
+
+    <!-- Hero Text -->
+    <div class="hero-text">
+      <h1>Welcome to Seika Education Consultancy</h1>
+      <p>Your trusted partner for studying in Japan</p>
+    </div>
   </section>
 
+  <!-- Services -->
   <main class="container">
     <section class="services">
       <div class="service">
@@ -243,8 +271,28 @@
     </section>
   </main>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
   </footer>
+
+  <!-- Swiper JS -->
+  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+
+  <!-- Swiper Init -->
+  <script>
+    const swiper = new Swiper(".mySwiper", {
+      loop: true,
+      autoplay: {
+        delay: 4000,
+        disableOnInteraction: false,
+      },
+      pagination: {
+        el: ".swiper-pagination",
+        clickable: true,
+      },
+    });
+  </script>
+
 </body>
 </html>
