--- a/index.html
+++ b/index.html
@@ -24,10 +24,16 @@
       flex-wrap: wrap;
       justify-content: space-between;
       align-items: center;
+      position: relative;
     }
 
     header .logo img {
       height: 80px;
+    }
+
+    nav {
+      display: flex;
+      align-items: center;
     }
 
     nav ul {
@@ -61,6 +67,21 @@
       cursor: pointer;
       font-weight: 600;
       margin-left: 5px;
+    }
+
+    /* Hamburger Menu Button (スマホ用) */
+    .menu-toggle {
+      display: none;
+      flex-direction: column;
+      cursor: pointer;
+    }
+
+    .menu-toggle span {
+      background: white;
+      height: 3px;
+      width: 25px;
+      margin: 4px 0;
+      transition: 0.4s;
     }
 
     /* Hero with Swiper */
@@ -164,8 +185,8 @@
     /* Responsive */
     @media (max-width: 768px) {
       header {
-        flex-direction: column;
-        align-items: flex-start;
+        flex-direction: row;
+        justify-content: space-between;
       }
 
       header .logo img {
@@ -173,12 +194,27 @@
       }
 
       nav ul {
+        display: none;
         flex-direction: column;
+        position: absolute;
+        top: 70px;
+        left: 0;
+        background: #2A6BBF;
         width: 100%;
+        padding: 10px 0;
       }
 
       nav ul li {
         margin: 10px 0;
+        text-align: center;
+      }
+
+      nav ul.show {
+        display: flex;
+      }
+
+      .menu-toggle {
+        display: flex;
       }
 
       .swiper {
@@ -201,16 +237,26 @@
   <!-- Header -->
   <header>
     <div class="logo">
-      <img src="Seika-Final-Logo.jpeg" alt="Seika Education Consultancy" />
+      <img src="Logo-Seika.jpeg" alt="Seika Education Consultancy" />
     </div>
+
+    <!-- Hamburger button -->
+    <div class="menu-toggle" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
+
+    <!-- Nav menu -->
     <nav>
-      <ul>
+      <ul id="nav-menu">
         <li><a href="#">Home</a></li>
         <li><a href="#">About</a></li>
         <li><a href="#">Services</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
+
     <div class="language-switch">
       <button id="enBtn">English</button> | <button id="jpBtn">日本語</button>
     </div>
@@ -220,25 +266,19 @@
   <section class="hero">
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
-        <!-- Slide 1 -->
         <div class="swiper-slide">
-          <img src="your-image1.jpg" alt="Welcome Image 1" />
+          <img src="Logo-Seika.jpeg" alt="Welcome Image 1" />
         </div>
-        <!-- Slide 2 -->
         <div class="swiper-slide">
-          <img src="your-image2.jpg" alt="Welcome Image 2" />
+          <img src="Seika-Final-Logo.jpeg" alt="Welcome Image 2" />
         </div>
-        <!-- Slide 3 -->
         <div class="swiper-slide">
-          <img src="your-image3.jpg" alt="Welcome Image 3" />
+          <img src="Logo-Seika.jpeg" alt="Welcome Image 3" />
         </div>
       </div>
-
-      <!-- Pagination -->
       <div class="swiper-pagination"></div>
     </div>
 
-    <!-- Hero Text -->
     <div class="hero-text">
       <h1>Welcome to Seika Education Consultancy</h1>
       <p>Your trusted partner for studying in Japan</p>
@@ -292,6 +332,12 @@
         clickable: true,
       },
     });
+
+    // Hamburger menu toggle
+    function toggleMenu() {
+      const navMenu = document.getElementById('nav-menu');
+      navMenu.classList.toggle('show');
+    }
   </script>
 
 </body>
