--- a/index.html
+++ b/index.html
@@ -308,19 +308,19 @@
       <div class="swiper-wrapper">
         <div class="swiper-slide">
           <picture>
-            <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Japanese+Culture" />
+            <source media="(max-width: 768px)" srcset="Logo-Seika.jpeg" />
             <img src="https://via.placeholder.com/1200x600?text=Japanese+Culture" alt="Japanese culture scene" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
-            <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=University+Campus" />
+            <source media="(max-width: 768px)" srcset="Seika-Final-Logo.jpeg" />
             <img src="https://via.placeholder.com/1200x600?text=University+Campus" alt="Japanese university campus" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
-            <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Students+Studying" />
+            <source media="(max-width: 768px)" srcset="Logo-Seika.jpeg" />
             <img src="https://via.placeholder.com/1200x600?text=Students+Studying" alt="Students studying in Japan" />
           </picture>
         </div>
