--- a/index.html
+++ b/index.html
@@ -307,21 +307,21 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <picture>
-            <source media="(max-width: 768px)" srcset="Logo-Seika.jpeg" />
-            <img src="https://via.placeholder.com/1200x600?text=Japanese+Culture" alt="Japanese culture scene" />
+           <picture>
+            <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Japanese+Culture" />
+            <img src="logo-Seika.jpeg" alt="Japanese culture scene" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
-            <source media="(max-width: 768px)" srcset="Seika-Final-Logo.jpeg" />
-            <img src="https://via.placeholder.com/1200x600?text=University+Campus" alt="Japanese university campus" />
+            <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=University+Campus" />
+            <img src="Seika-Final-Logo.Jpeg" alt="Japanese university campus" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
-            <source media="(max-width: 768px)" srcset="Logo-Seika.jpeg" />
-            <img src="https://via.placeholder.com/1200x600?text=Students+Studying" alt="Students studying in Japan" />
+            <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Students+Studying" />
+            <img src="Logo-Seika.jpeg" alt="Students studying in Japan" />
           </picture>
         </div>
       </div>
