--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
     <div class="social-links">
       <a href="https://facebook.com/seikaedu" target="_blank">Facebook</a> |
-      <a href="https://twitter.com/seikaedu" target="_blank">Twitter</a> |
+      <a href="https://www.tiktok.com/seikaedu" target="_blank">TikTok</a> |
       <a href="https://instagram.com/seikaedu" target="_blank">Instagram</a>
     </div>
   </footer>
