--- a/index.html
+++ b/index.html
@@ -309,13 +309,13 @@
         <div class="swiper-slide">
            <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Japanese+Culture" />
-            <img src="logo-Seika.jpeg" alt="Japanese culture scene" />
+            <img src="Logo-Seika.jpeg" alt="Japanese culture scene" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=University+Campus" />
-            <img src="Seika-Final-Logo.Jpeg" alt="Japanese university campus" />
+            <img src="Seika-Final-Logo.jpeg" alt="Japanese university campus" />
           </picture>
         </div>
         <div class="swiper-slide">
