--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
     }
 
     .swiper-slide img {
-      object-fit: contain;
+      object-fit: cover; /* Changed from contain to cover */
+      object-position: center; /* Center cropping */
       width: 100%;
       height: 100%;
     }
@@ -350,19 +351,19 @@
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Japanese+Culture" />
-            <img src="Logo-Seika.jpeg" alt="Japanese culture scene" loading="lazy" />
+            <img src="https://via.placeholder.com/1200x600?text=Japanese+Culture" alt="Japanese culture scene" loading="lazy" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=University+Campus" />
-            <img src="Seika-Final-Logo.jpeg" alt="Japanese university campus" loading="lazy" />
+            <img src="https://via.placeholder.com/1200x600?text=University+Campus" alt="Japanese university campus" loading="lazy" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Students+Studying" />
-            <img src="Logo-Seika.jpeg" alt="Students studying in Japan" loading="lazy" />
+            <img src="https://via.placeholder.com/1200x600?text=Students+Studying" alt="Students studying in Japan" loading="lazy" />
           </picture>
         </div>
       </div>
@@ -410,7 +411,7 @@
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
     <div class="social-links">
       <a href="https://facebook.com/seikaedu" target="_blank">Facebook</a> |
-      <a href="https://tiktok.com/seikaedu" target="_blank">TikTok</a> |
+      <a href="https://twitter.com/seikaedu" target="_blank">Twitter</a> |
       <a href="https://instagram.com/seikaedu" target="_blank">Instagram</a>
     </div>
   </footer>
