--- a/index.html
+++ b/index.html
@@ -349,22 +349,23 @@
     <div class="swiper mySwiper">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
-          <picture>
+           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Japanese+Culture" />
-            <img src="https://via.placeholder.com/1200x600?text=Japanese+Culture" alt="Japanese culture scene" loading="lazy" />
+            <img src="Logo-Seika.jpeg" alt="Japanese culture scene" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=University+Campus" />
-            <img src="https://via.placeholder.com/1200x600?text=University+Campus" alt="Japanese university campus" loading="lazy" />
+            <img src="Seika-Final-Logo.jpeg" alt="Japanese university campus" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Students+Studying" />
-            <img src="https://via.placeholder.com/1200x600?text=Students+Studying" alt="Students studying in Japan" loading="lazy" />
+            <img src="Logo-Seika.jpeg" alt="Students studying in Japan" />
           </picture>
+        </div>
         </div>
       </div>
       <div class="swiper-pagination"></div>
