--- a/index.html
+++ b/index.html
@@ -343,19 +343,19 @@
         <div class="swiper-slide">
            <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Japanese+Culture" />
-            <img src="Logo-Seika.jpeg" alt="Japanese culture scene" />
+            <img src="banner-3.png" alt="Japanese culture scene" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=University+Campus" />
-            <img src="Seika-Final-Logo.jpeg" alt="Japanese university campus" />
+            <img src="banner-2.png" alt="Japanese university campus" />
           </picture>
         </div>
         <div class="swiper-slide">
           <picture>
             <source media="(max-width: 768px)" srcset="https://via.placeholder.com/600x300?text=Students+Studying" />
-            <img src="Logo-Seika.jpeg" alt="Students studying in Japan" />
+            <img src="banner-1.png" alt="Students studying in Japan" />
           </picture>
         </div>
       </div>
@@ -402,7 +402,7 @@
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
     <div class="social-links">
       <a href="https://facebook.com/seikaedu" target="_blank">Facebook</a> |
-      <a href="https://twitter.com/seikaedu" target="_blank">Twitter</a> |
+      <a href="https://tiktok.com/seikaedu" target="_blank">TikTok</a> |
       <a href="https://instagram.com/seikaedu" target="_blank">Instagram</a>
     </div>
   </footer>
