--- a/index.html
+++ b/index.html
@@ -353,11 +353,6 @@
       </ul>
     </nav>
 
-    <div class="contact-info">
-      <a href="tel:+1234567890">+1-234-567-890</a>
-      <a href="mailto:info@seikaedu.com">info@seikaedu.com</a>
-    </div>
-
     <div class="language-switch">
       <button id="enBtn" class="active">English</button> | <button id="jpBtn">日本語</button>
     </div>
@@ -430,7 +425,7 @@
   <footer>
     <p>© 2025 Seika Education Consultancy. All rights reserved.</p>
     <div class="social-links">
-      <a href="https://facebook.com/seikaedu" target="_blank">Facebook</a> |
+      <a href="https://www.facebook.com/isanabroad" target="_blank">Facebook</a> |
       <a href="https://tiktok.com/seikaedu" target="_blank">TikTok</a> |
       <a href="https://instagram.com/seikaedu" target="_blank">Instagram</a>
     </div>
