--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@
       <ul id="nav-menu">
         <li><a href="#home">Home</a></li>
         <li><a href="#services">Services</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
